<resources>
    <string name="app_name">Doodi</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="button_save">SAVE</string>
    <string name="action_logout">Logout</string>
    <string name="save">SAVE</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="device_id">Device ID</string>
    <string name="name">Name</string>
    <string name="action_refresh">Refresh</string>
    <string name="alarms">Alarms</string>
    <string name="title_activity_alarms">Alarms</string>
    <string name="title_activity_new_alarm">New Alarm</string>
    <string name="action_new_alarm">Add Alarm</string>
</resources>
