<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.iftach.doodi.MainActivity">
    <item
        android:id="@+id/action_alarms"
        android:icon="@android:drawable/ic_menu_today"

        android:orderInCategory="2"
        android:title="@string/alarms"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="101"
        android:title="@string/action_logout"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_refresh"
        android:icon="@android:drawable/ic_menu_rotate"
        android:orderInCategory="1"
        android:title="@string/action_refresh"
        app:showAsAction="always" />
</menu>
